<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutStatistics"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B1B5B4"
    android:orientation="vertical"
    tools:context=".Statistics">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="40sp"
        android:layout_marginRight="20sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnReturn"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_marginRight="10sp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:onClick="btnReturn_click"
            android:text="@string/btnReturn" />

        <Button
            android:id="@+id/btnQuestionsLog"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_marginRight="10sp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:onClick="btnQuestionsLog_click"
            android:text="@string/btnQuestionsLog" />

        <Button
            android:id="@+id/btnTestsLog"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:onClick="btnTestsLog_click"
            android:text="@string/btnTestsLog" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="40sp"
        android:text="@string/tvStatInstruction" />

</LinearLayout>