<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/tvTitle"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:onClick="btnStart_click"
        android:text="@string/btnStart"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnHowToPlay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnHowToPlay"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:onClick="btnHowToPlay_click"
        android:text="@string/btnHowToPlay"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnStatistics"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnStatistics"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:onClick="btnStatistics_click"
        android:text="@string/btnStatistics"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnSettings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="100dp"
        android:background="#FFFFFF"
        android:onClick="btnSettings_click"
        android:text="@string/btnSettings"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>