<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/actGame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#726B6B"
    android:onClick="btnPause_click"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/tvEmpty"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvQuestionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/tvEmpty"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvQuestionContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/Loading"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvQuestionNumber" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:onClick="setNextQuestion"
        android:text="Next"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivLoading"
        android:layout_width="100sp"
        android:layout_height="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cached_black_24dp"

        />

    <Button
        android:id="@+id/btnReady"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:onClick="setNextQuestion"
        android:paddingHorizontal="20sp"
        android:paddingVertical="20sp"
        android:text="@string/imReady"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rbAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--        <RadioButton-->
        <!--            android:id="@+id/rbAnswerA"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:onClick="onUserAnswerQuestion"-->
        <!--            android:text="A"-->
        <!--            android:textColor="#FFFFFF"-->
        <!--            android:textSize="40sp" />-->

        <!--        <RadioButton-->
        <!--            android:id="@+id/rbAnswerB"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:onClick="onUserAnswerQuestion"-->
        <!--            android:text="B"-->
        <!--            android:textColor="#FFFFFF"-->
        <!--            android:textSize="40sp" />-->

        <!--        <RadioButton-->
        <!--            android:id="@+id/rbAnswerC"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:onClick="onUserAnswerQuestion"-->
        <!--            android:text="C"-->
        <!--            android:textColor="#FFFFFF"-->
        <!--            android:textSize="40sp" />-->

        <!--        <RadioButton-->
        <!--            android:id="@+id/rbAnswerD"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:onClick="onUserAnswerQuestion"-->
        <!--            android:text="D"-->
        <!--            android:textColor="#FFFFFF"-->
        <!--            android:textSize="40sp" />-->
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>